<?xml version='1.0' encoding='utf-8'?>
<LinearLayout xmlns:android='http://schemas.android.com/apk/res/android'
    android:layout_width='fill_parent'
    android:layout_height='wrap_content'
    android:background="@color/white"
    android:orientation='vertical'
    android:padding='10dp'>

    <LinearLayout
        android:layout_width='match_parent'
        android:layout_height='wrap_content'
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dialog_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_quetions"
            android:visibility="visible" />

        <TextView
            android:id='@+id/dialog_msg'
            android:layout_width='match_parent'
            android:layout_height='wrap_content'
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/map_key_error"
            android:textColor="@color/app_gray_text"
            android:textSize="@dimen/title_text_size"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width='match_parent'
        android:layout_height='wrap_content'
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@color/topbar_color"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size" />

    </RelativeLayout>

</LinearLayout>